CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(GAMES202)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

SET(AGZ_ENABLE_D3D11 ON)
ADD_SUBDIRECTORY(lib/agz-utils)
TARGET_COMPILE_DEFINITIONS(AGZUtils PUBLIC AGZ_UTILS_SSE _UNICODE)
SET_TARGET_PROPERTIES(AGZUtils PROPERTIES FOLDER "ThirdParty")

SET(PROJECT_ASSET_DIR "${CMAKE_SOURCE_DIR}/asset/")

ADD_SUBDIRECTORY(src/common)
ADD_SUBDIRECTORY(src/00.PCF)
