CMAKE_MINIMUM_REQUIRED(VERSION 3.18)

PROJECT(01-PRT)

SET(TargetName 01.PRT)

FILE(GLOB_RECURSE CPP_SRC
		"${PROJECT_SOURCE_DIR}/*.h"
		"${PROJECT_SOURCE_DIR}/*.cpp")

FILE(GLOB_RECURSE HLSL_SRC
		"${PROJECT_ASSET_DIR}/01/*.hlsl")

ADD_EXECUTABLE(${TargetName} ${CPP_SRC} ${HLSL_SRC})

SET_PROPERTY(SOURCE ${HLSL_SRC} PROPERTY VS_SETTINGS "ExcludedFromBuild=true")

SOURCE_GROUP("Sources" FILES ${CPP_SRC})
SOURCE_GROUP("Shaders" FILES ${HLSL_SRC})

SET_PROPERTY(TARGET ${TargetName} PROPERTY CXX_STANDARD 20)
SET_PROPERTY(TARGET ${TargetName} PROPERTY CXX_STANDARD_REQUIRED ON)

IF(MSVC)
    SET_PROPERTY(
        TARGET ${TargetName}
        PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/")
ENDIF()

TARGET_LINK_LIBRARIES(${TargetName} PUBLIC AGZUtils Common)
