CMAKE_MINIMUM_REQUIRED(VERSION 3.18)

PROJECT(COMMON)

SET(TargetName Common)

FILE(GLOB_RECURSE CPP_SRC
		"${PROJECT_SOURCE_DIR}/*.h"
		"${PROJECT_SOURCE_DIR}/*.cpp")

FILE(GLOB_RECURSE HLSL_SRC
		"${PROJECT_ASSET_DIR}/common/*.hlsl")

ADD_LIBRARY(${TargetName} STATIC ${CPP_SRC} ${HLSL_SRC})

SET_PROPERTY(
	SOURCE ${HLSL_SRC}
	PROPERTY VS_TOOL_OVERRIDE "None")

SOURCE_GROUP("Sources" FILES ${CPP_SRC})
SOURCE_GROUP("Shaders" FILES ${HLSL_SRC})

SET_PROPERTY(TARGET ${TargetName} PROPERTY CXX_STANDARD 20)
SET_PROPERTY(TARGET ${TargetName} PROPERTY CXX_STANDARD_REQUIRED ON)

IF(MSVC)
    SET_PROPERTY(
        TARGET ${TargetName}
        PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/")
ENDIF()

TARGET_INCLUDE_DIRECTORIES(${TargetName} PUBLIC "${PROJECT_SOURCE_DIR}/")
TARGET_LINK_LIBRARIES(${TargetName} PUBLIC AGZUtils)
